<resources>
    <string name="app_name">Travel Ceylon</string>
    <string name="colombo">Colombo</string>
    <string name="kite_festival">Kite Festival</string>
    <string name="sri_lanka_s_biggest_kite_festival_was_held_at_galle_face_green_recently_located_in_the_heart_of_sri_lanka_s_capital_colombo_the_galle_face_green_in_sri_lanka_is_a_magnificent_place_to_witness_a_marvelous_sunset_over_the_indian_ocean_the_main_attraction_at_galle_face_is_its_vast_open_space_the_array_of_street_food_and_the_beautiful_indian_ocean_stretched_to_eternity">Sri Lanka’s biggest kite festival was held at Galle Face Green recently. Located in the heart of Sri Lanka’s capital, Colombo, the Galle Face Green in Sri Lanka is a magnificent place to witness a marvelous sunset over the Indian Ocean. The main attraction at Galle Face is its vast open space, the array of street food and the beautiful Indian Ocean stretched to eternity.</string>
    <string name="to_go">To Go</string>
    <string name="surfing">Surfing</string>
    <string name="boat_riding">Boat Riding</string>
    <string name="total_event">Total Event</string>
    <string name="total_charge">Total Charge</string>
    <string name="beach_festival">Beach Festival</string>
    <string name="_4">4</string>
    <string name="_30">30$</string>
    <string name="charges">Charges</string>
    <string name="free">Free</string>
    <string name="_15">15$</string>
    <string name="_10">10$</string>
    <string name="_5">5$</string>
    <string name="mathara">Mathara</string>
    <string name="upcoming_event">UPCOMING EVENT</string>
    <string name="read_more">Read More</string>
    <string name="nuwara_eliye">Nuwara Eliye</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_accept_the_policy_and_terms">I accept the policy and terms</string>
    <string name="register">REGISTER</string>
    <string name="welcome_to_travel_ceylon">Welcome To Travel Ceylon</string>
    <string name="sign_in">Sign In</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="send_a_code_to_the_email">Send a code to the Email</string>
    <string name="vinodi">Vinodi!</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="logout">LOGOUT</string>
    <string name="full_name">Full Name</string>
    <string name="vinodi_saumya_samarathunga">Vinodi saumya samarathunga</string>
    <string name="vinodisaumya_gmail_com">vinodisaumya@gmail.com</string>
</resources>