<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDCDC"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="111dp">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="@dimen/event2I1w"
        android:layout_height="@dimen/event2I1h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/kites" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colombo"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="188dp"
        android:layout_height="29dp"
        android:layout_marginEnd="5dp"
        android:background="#FDFDFD"
        android:text="@string/kite_festival"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/button14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:backgroundTint="#FFC107"
        android:text="+"
        android:textSize="24sp"
        app:iconTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/top_grid" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="367dp"
        android:layout_height="@dimen/e2l2h"
        android:text="@string/sri_lanka_s_biggest_kite_festival_was_held_at_galle_face_green_recently_located_in_the_heart_of_sri_lanka_s_capital_colombo_the_galle_face_green_in_sri_lanka_is_a_magnificent_place_to_witness_a_marvelous_sunset_over_the_indian_ocean_the_main_attraction_at_galle_face_is_its_vast_open_space_the_array_of_street_food_and_the_beautiful_indian_ocean_stretched_to_eternity"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839" />

</androidx.constraintlayout.widget.ConstraintLayout>